--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -11,8 +11,8 @@ jobs:
       runs-on: ubuntu-latest
       steps:
         - name: "Inıt"
-        - run: npm ci
+          run: npm ci
         - name: "Test"
-        - run: npm test
+          run: npm test
         - name: "Create Env"
-        - run: echo "POSTGRES_HOST=${{secrets.POSTGRES_HOST}}\nPOSTGRES_PORT=${{secrets.POSTGRES_PORT}}\nPOSTGRES_DATABASE=${{secrets.POSTGRES_DATABASE}}\nPOSTGRES_USER=${{secrets.POSTGRES_USER}}\nPOSTGRES_PASSWORD=${{secrets.POSTGRES_PASSWORD}}\nPORT=$PORT\nMODE=DEV\nRUN_MIGRATIONS=false" >> .env && echo .env
+          run: echo "POSTGRES_HOST=${{secrets.POSTGRES_HOST}}\nPOSTGRES_PORT=${{secrets.POSTGRES_PORT}}\nPOSTGRES_DATABASE=${{secrets.POSTGRES_DATABASE}}\nPOSTGRES_USER=${{secrets.POSTGRES_USER}}\nPOSTGRES_PASSWORD=${{secrets.POSTGRES_PASSWORD}}\nPORT=$PORT\nMODE=DEV\nRUN_MIGRATIONS=false" >> .env && echo .env
