--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -16,4 +16,4 @@ jobs:
         - name: "Test"
           run: npm test
         - name: "Create Env"
-          run: echo "POSTGRES_HOST=${{secrets.POSTGRES_HOST}}\nPOSTGRES_PORT=${{secrets.POSTGRES_PORT}}\nPOSTGRES_DATABASE=${{secrets.POSTGRES_DATABASE}}\nPOSTGRES_USER=${{secrets.POSTGRES_USER}}\nPOSTGRES_PASSWORD=${{secrets.POSTGRES_PASSWORD}}\nPORT=$PORT\nMODE=DEV\nRUN_MIGRATIONS=false" >> .env && echo .env
+          run: printf "POSTGRES_HOST=${{secrets.POSTGRES_HOST}}\nPOSTGRES_PORT=${{secrets.POSTGRES_PORT}}\nPOSTGRES_DATABASE=${{secrets.POSTGRES_DATABASE}}\nPOSTGRES_USER=${{secrets.POSTGRES_USER}}\nPOSTGRES_PASSWORD=${{secrets.POSTGRES_PASSWORD}}\nPORT=$PORT\nMODE=DEV\nRUN_MIGRATIONS=false" > .env
