deploment için dockerfile yazıldı

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,7 @@ POSTGRES_PORT=5432
 POSTGRES_DATABASE=db
 POSTGRES_USER=usr
 POSTGRES_PASSWORD=password
-PORT=3000
+PORT=$PORT
 MODE=DEV
-RUN_MIGRATIONS=true
+RUN_MIGRATIONS=false
+POSTGRES_HOST=${{secrets.POSTGRES_HOST}}\nPOSTGRES_PORT=${{secrets.POSTGRES_PORT}}\nPOSTGRES_DATABASE=${{secrets.POSTGRES_DATABASE}}\nPOSTGRES_USER=${{secrets.POSTGRES_USER}}\nPOSTGRES_PASSWORD=${{secrets.POSTGRES_PASSWORD}}\nPORT=$PORT\nMODE=DEV\nRUN_MIGRATIONS=false
