--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -17,3 +17,10 @@ jobs:
           run: npm test
         - name: "Create Env"
           run: printf "POSTGRES_HOST=${{secrets.POSTGRES_HOST}}\nPOSTGRES_PORT=${{secrets.POSTGRES_PORT}}\nPOSTGRES_DATABASE=${{secrets.POSTGRES_DATABASE}}\nPOSTGRES_USER=${{secrets.POSTGRES_USER}}\nPOSTGRES_PASSWORD=${{secrets.POSTGRES_PASSWORD}}\nPORT=$PORT\nMODE=DEV\nRUN_MIGRATIONS=false" > .env
+        - name: "Deploy"
+          uses: akhileshns/heroku-deploy@v3.5.7
+          with:
+            heroku_api_key: ${{secrets.HEROKU_API_KEY}}
+            heroku_app_name: "perfanalytics-dashboard"
+            heroku_email: "butguc@gmail.com"
+            usedocker: true
