--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -21,6 +21,6 @@ jobs:
           uses: akhileshns/heroku-deploy@v3.5.7
           with:
             heroku_api_key: ${{secrets.HEROKU_API_KEY}}
-            heroku_app_name: "perfanalytics-dashboard"
+            heroku_app_name: "perfanalytics-api-butguc"
             heroku_email: "butguc@gmail.com"
             usedocker: true
