--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,6 @@ POSTGRES_PORT=5432
 POSTGRES_DATABASE=db
 POSTGRES_USER=usr
 POSTGRES_PASSWORD=password
-PORT=$PORT
+PORT=#PORT
 MODE=DEV
 RUN_MIGRATIONS=false
