--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "pretypeorm": "(rm ormconfig.json || :) && ORM_CONF=js ts-node -r tsconfig-paths/register src/Scripts/WriteTypeOrmConfig.ts"
+    "pretypeorm": "(rm ormconfig.json || :) && ORM_CONF=js ts-node -r tsconfig-paths/register src/Scripts/WriteTypeOrmConfig.ts",
+    "typeorm": "node --require ts-node/register ./node_modules/typeorm/cli.js" 
   },
   "dependencies": {
     "@nestjs/common": "^7.0.0",
